Adjust layout to center on desktop and fix scroll on mobile

--- a/src/components/page/Layout/Layout.scss
+++ b/src/components/page/Layout/Layout.scss
@@ -4,16 +4,12 @@
 * Mobile screen styles (< 800px)
 *******************************************************************************/
 .Layout {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
   height: 100vh;
   color: $text-color;
 }
 
 .Container {
-  max-height: 100%;
+  height: 100%;
   overflow: auto;
 }
 
