--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,10 +11,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
-  overflow: hidden;
-}
-
 h1,
 h2 {
   font-family: 'Source Code Pro', monospace;
